--- a/lab4/mainwindow.ui
+++ b/lab4/mainwindow.ui
@@ -33,7 +33,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>background.png</pixmap>
+     <pixmap>img/background.png</pixmap>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_back">
@@ -205,7 +205,7 @@
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap>fon.jpg</pixmap>
+      <pixmap>img/fon.jpg</pixmap>
      </property>
     </widget>
     <widget class="QPushButton" name="btn_login">
@@ -1627,12 +1627,55 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
    </widget>
+   <widget class="QFrame" name="frame_city">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>170</y>
+      <width>311</width>
+      <height>251</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QLabel" name="name">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>10</y>
+       <width>121</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+    <widget class="QTableWidget" name="properties">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>60</y>
+       <width>221</width>
+       <height>171</height>
+      </rect>
+     </property>
+    </widget>
+   </widget>
    <zorder>label_bkgrd</zorder>
    <zorder>frame_cities</zorder>
    <zorder>btn_back</zorder>
    <zorder>frame_search</zorder>
    <zorder>frame_login</zorder>
    <zorder>text_found_cities</zorder>
+   <zorder>frame_city</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
